objects/simpli_lv__List_View_Org_Wide_Setting__mdt.object
<CustomObject>
    <description>DEPRECATED. DO NOT USE</description>
    <fields>
        <fullName>simpli_lv__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simpli_lv__User_Value__c</fullName>
        <label>User Value</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>simpli_lv__Value__c</fullName>
        <label>Value</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <label>List View Org Wide Setting</label>
    <listViews>
        <fullName>simpli_lv__All</fullName>
        <columns>MasterLabel</columns>
        <columns>simpli_lv__Description__c</columns>
        <columns>simpli_lv__User_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>List View Org Wide Setting</pluralLabel>
</CustomObject>